--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="text-center mb-4">Aggiungi Documento</h2>
+<h2 class="text-center mb-4">Aggiungi Omologa</h2>
 <form method="POST">
     <div class="form-group">
         <label for="nome_produttore">Nome Produttore</label>
@@ -27,6 +27,6 @@
         <label for="data_accettazione">Data Accettazione</label>
         <input type="date" class="form-control" id="data_accettazione" name="data_accettazione" required>
     </div>
-    <button type="submit" class="btn btn-primary">Aggiungi Documento</button>
+    <button type="submit" class="btn btn-primary">Aggiungi Omologa</button>
 </form>
 {% endblock %}
