--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/add">Aggiungi Documento</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/add">Aggiungi Omologa</a></li>
                     <!--<li class="nav-item"><a class="nav-link" href="/search">Cerca Documento</a></li>-->
                 </ul>
             </div>
