--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2 class="text-center mb-4">Lista Documenti</h2>
+<h2 class="text-center mb-4">Lista Omologhe</h2>
 
 <!-- Pulsante per aggiungere un nuovo documento -->
 <a href="/add" class="btn btn-primary mb-3">Aggiungi Omologa</a>
