aggiunta modifica + pagine produttori ed impianti

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,8 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/add">Aggiungi Omologa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Produttori</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/add">Impianti</a></li>
                     <!--<li class="nav-item"><a class="nav-link" href="/search">Cerca Documento</a></li>-->
                 </ul>
             </div>
