--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
     </div>
 </form>
 
-<!-- Form per eliminare i documenti selezionati -->
-<form action="/delete" method="post">
+<!-- Form per selezionare e eliminare documenti -->
+<form method="POST" action="{{ url_for('delete_documents') }}">
     <div class="mb-3">
         <button type="submit" class="btn btn-danger">Elimina Selezionati</button>
     </div>
@@ -24,7 +24,9 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th><input type="checkbox" id="select-all"></th> <!-- Colonna per selezionare tutti -->
+                <th>
+                    <input type="checkbox" id="select-all"> <!-- Checkbox per selezionare tutti -->
+                </th>
                 <th>Produttore</th>
                 <th>Impianto Destinazione</th>
                 <th>Indirizzo Cantiere</th>
@@ -32,13 +34,16 @@
                 <th>Data Invio</th>
                 <th>Data Accettazione</th>
                 <th>Data Scadenza</th>
+                <th>Azioni</th> <!-- Nuova colonna per le azioni -->
             </tr>
         </thead>
         <tbody>
             {% for doc in documenti %}
             <tr>
-                <td><input type="checkbox" name="document_ids" value="{{ doc['id'] }}"></td>
-                <!-- Selezione documento -->
+                <!-- Checkbox per selezionare il documento -->
+                <td>
+                    <input type="checkbox" name="document_ids" value="{{ doc['id'] }}">
+                </td>
                 <td>{{ doc['nome_produttore'] }}</td>
                 <td>{{ doc['impianto_destinazione'] }}</td>
                 <td>{{ doc['indirizzo_cantiere'] }}</td>
@@ -46,6 +51,10 @@
                 <td>{{ doc['data_invio'] }}</td>
                 <td>{{ doc['data_accettazione'] }}</td>
                 <td>{{ doc['data_scadenza'] }}</td>
+                <td>
+                    <!-- Pulsante Modifica -->
+                    <a href="{{ url_for('edit_document', document_id=doc['id']) }}" class="btn btn-warning btn-sm">Modifica</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
@@ -54,8 +63,8 @@
 
 {% endblock %}
 
+<!-- Script JavaScript per selezionare/deselezionare tutti i checkbox -->
 <script>
-    // Selezionare/deselezionare tutti i checkbox
     document.getElementById('select-all').addEventListener('click', function (e) {
         let checkboxes = document.querySelectorAll('input[name="document_ids"]');
         checkboxes.forEach(function (checkbox) {
