--- a/templates/aggiungi_produttore.html
+++ b/templates/aggiungi_produttore.html
@@ -10,9 +10,15 @@
 <h1>Aggiungi Produttore</h1>
 
 <form method="POST">
+    <!-- Campo per il Nome del Produttore -->
     <label for="nome_produttore">Nome Produttore:</label>
-    <input type="text" name="nome_produttore" required><br>
+    <input type="text" name="nome_produttore" id="nome_produttore" required><br>
 
+    <!-- Campo per l'Indirizzo del Produttore -->
+    <label for="indirizzo">Indirizzo Produttore:</label>
+    <input type="text" name="indirizzo" id="indirizzo" required><br>
+
+    <!-- Bottone per inviare il form -->
     <button type="submit">Aggiungi Produttore</button>
 </form>
 
