html aggiungi_produttore changed

--- a/templates/aggiungi_produttore.html
+++ b/templates/aggiungi_produttore.html
@@ -12,11 +12,11 @@
 <form method="POST">
     <!-- Campo per il Nome del Produttore -->
     <label for="nome_produttore">Nome Produttore:</label>
-    <input type="text" name="nome_produttore" id="nome_produttore" required><br>
+    <input type="text" id="nome_produttore" name="nome_produttore" required><br>
 
     <!-- Campo per l'Indirizzo del Produttore -->
-    <label for="indirizzo">Indirizzo Produttore:</label>
-    <input type="text" name="indirizzo" id="indirizzo" required><br>
+    <label for="indirizzo_produttore">Indirizzo Produttore:</label>
+    <input type="text" id="indirizzo_produttore" name="indirizzo_produttore" required><br>
 
     <!-- Bottone per inviare il form -->
     <button type="submit">Aggiungi Produttore</button>
@@ -24,3 +24,4 @@
 
 </body>
 </html>
+
