--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +12,32 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+
+        .header {
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            background-color: #ffffff;
+            border-bottom: 2px solid #ddd;
+        }
+
+        .header img {
+            height: 50px;
+            /* Regola l'altezza del logo */
+            margin-right: 20px;
+        }
+
+        .header h1 {
+            margin: 0;
+            color: #333;
+            font-size: 24px;
+        }
+
         .container {
             text-align: center;
             padding: 50px;
         }
-        h1 {
-            margin-bottom: 30px;
-            color: #333;
-        }
+
         .button {
             display: inline-block;
             padding: 15px 30px;
@@ -30,24 +49,31 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
+
         .button:hover {
             background-color: #45a049;
         }
     </style>
 </head>
+
 <body>
 
-<div class="container">
-    <h1>Benvenuto nel sistema di gestione documenti</h1>
+    <!-- Header con il logo e il titolo -->
+    <div class="header">
+        <img src="{{ url_for('static', filename='logo_staf_piccolo.jpg') }}" alt="Logo">
+        <h1>Benvenuto nel sistema di gestione documenti</h1>
+    </div>
 
-    <a href="{{ url_for('lista_omologhe') }}" class="button">Lista Omologhe</a><br>
-    <a href="{{ url_for('aggiungi_omologa') }}" class="button">Aggiungi Omologa</a><br>
-    <a href="{{ url_for('lista_produttori') }}" class="button">Lista Produttori</a><br>
-    <a href="{{ url_for('aggiungi_produttore') }}" class="button">Aggiungi Produttore</a><br>
-    <a href="{{ url_for('lista_impianti') }}" class="button">Lista Impianti</a><br>
-    <a href="{{ url_for('aggiungi_impianto') }}" class="button">Aggiungi Impianto</a><br>
-
-</div>
+    <!-- Contenuto principale della pagina -->
+    <div class="container">
+        <a href="{{ url_for('lista_omologhe') }}" class="button">Lista Omologhe</a><br>
+        <a href="{{ url_for('aggiungi_omologa') }}" class="button">Aggiungi Omologa</a><br>
+        <a href="{{ url_for('lista_produttori') }}" class="button">Lista Produttori</a><br>
+        <a href="{{ url_for('aggiungi_produttore') }}" class="button">Aggiungi Produttore</a><br>
+        <a href="{{ url_for('lista_impianti') }}" class="button">Lista Impianti</a><br>
+        <a href="{{ url_for('aggiungi_impianto') }}" class="button">Aggiungi Impianto</a><br>
+    </div>
 
 </body>
+
 </html>
