--- a/templates/lista_impianti.html
+++ b/templates/lista_impianti.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Impianti</title>
+    <script>
+        // Funzione per selezionare/deselezionare tutti i checkbox
+        function toggleSelectAll(source) {
+            const checkboxes = document.querySelectorAll('.impianto-checkbox');
+            checkboxes.forEach((checkbox) => {
+                checkbox.checked = source.checked;
+            });
+        }
+    </script>
 </head>
+
 <body>
 
-<h1>Lista Impianti</h1>
+    <h1>Lista Impianti</h1>
 
-<table border="1">
-    <thead>
-        <tr>
-            <th>Nome Impianto</th>
-            <th>Indirizzo Impianto</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for impianto in impianti %}
-        <tr>
-            <td>{{ impianto.nome_impianto }}</td>
-            <td>{{ impianto.indirizzo_impianto }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+    <form method="POST" action="{{ url_for('delete_impianti') }}">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
+                    <th>Nome Impianto</th>
+                    <th>Indirizzo Impianto</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for impianto in impianti %}
+                <tr>
+                    <td><input type="checkbox" name="impianto_ids" value="{{ impianto.id }}" class="impianto-checkbox">
+                    </td>
+                    <td>{{ impianto.nome_impianto }}</td>
+                    <td>{{ impianto.indirizzo_impianto }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        <br>
+
+        <button type="submit">Elimina Selezionati</button>
+    </form>
 
 </body>
+
 </html>
