--- a/templates/lista_produttori.html
+++ b/templates/lista_produttori.html
@@ -1,28 +1,51 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Produttori</title>
+    <script>
+        // Funzione per selezionare/deselezionare tutti i checkbox
+        function toggleSelectAll(source) {
+            const checkboxes = document.querySelectorAll('.produttore-checkbox');
+            checkboxes.forEach((checkbox) => {
+                checkbox.checked = source.checked;
+            });
+        }
+    </script>
 </head>
+
 <body>
 
-<h1>Lista Produttori</h1>
+    <h1>Lista Produttori</h1>
 
-<table border="1">
-    <thead>
-        <tr>
-            <th>Nome Produttore</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for produttore in produttori %}
-        <tr>
-            <td>{{ produttore.nome_produttore }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+    <form method="POST" action="{{ url_for('delete_produttori') }}">
+        <table border="1">
+            <thead>
+                <tr>
+                    <th><input type="checkbox" onclick="toggleSelectAll(this)"></th>
+                    <th>Nome Produttore</th>
+                    <th>Indirizzo Produttore</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produttore in produttori %}
+                <tr>
+                    <td><input type="checkbox" name="produttore_ids" value="{{ produttore.id }}"
+                            class="produttore-checkbox"></td>
+                    <td>{{ produttore.nome_produttore }}</td>
+                    <td>{{ produttore.indirizzo_produttore }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
+        <br>
+
+        <button type="submit">Elimina Selezionati</button>
+    </form>
 
 </body>
+
 </html>
