modifica lista_produttore funziona

--- a/templates/lista_produttori.html
+++ b/templates/lista_produttori.html
@@ -167,8 +167,8 @@
                         <!-- Checkbox individuali per ogni produttore -->
                         <td><input type="checkbox" name="produttore_ids" value="{{ produttore.id }}"
                                 class="produttore-checkbox"></td>
-                        <td>{{ produttore.nome }}</td>
-                        <td>{{ produttore.indirizzo }}</td>
+                        <td>{{ produttore.nome_produttore }}</td>
+                        <td>{{ produttore.indirizzo_produttore }}</td>
                     </tr>
                     {% endfor %}
                     {% else %}
